syntax = "proto3";
package nexa.relation.v1;
option go_package = "nexa/proto/gen/go/relation/v1";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "common/paged.proto";

service FollowService {
  rpc Follow(FollowRequest) returns (google.protobuf.Empty);
  rpc Unfollow(UnfollowRequest) returns (google.protobuf.Empty);
  rpc GetFollowers(GetUserFollowersRequest) returns (GetUserFollowersResponse);
  rpc GetFollowees(GetUserFolloweesRequest) returns (GetUserFolloweesResponse);
  rpc GetFollowStatus(GetFollowStatusRequest) returns (GetFollowStatusResponse);
  // Get user total follower and followee
  rpc GetUsersCount(GetUsersFollowCountRequest) returns (GetUsersFollowCountResponse);
  // Clear user related data on this service
  rpc ClearUsers(ClearUsersRequest) returns (google.protobuf.Empty);
}

enum FollowStatus {
  FOLLOWER = 0;
  MUTUAL = 1; // Both user is following
  NONE = 2;
  UNKNOWN = 3;
}

message FollowRequest {
  repeated string user_ids = 1;
}

message UnfollowRequest {
  repeated string user_ids = 1;
}

message GetUserFollowersRequest {
  optional string user_id = 1;
  common.PagedElementInput details = 2;
}

message GetUserFollowersResponse {
  repeated string user_ids = 1;
  common.PagedElementOutput details = 2;
}

message GetUserFolloweesRequest {
  optional string user_id = 1;
  common.PagedElementInput details = 2;
}

message GetUserFolloweesResponse {
  repeated string user_ids = 1;
  common.PagedElementOutput details = 2;
}

message GetFollowStatusRequest {
  optional string user_id = 1;
  repeated string opponent_user_ids = 2;
}

message GetFollowStatusResponse {
  repeated FollowStatus status = 1;
}

message GetUsersFollowCountRequest {
  repeated string user_ids = 1; // zero length means the user itself
}

message FollowCount {
  uint64 total_follower = 1;
  uint64 total_followee = 2;
}

message GetUsersFollowCountResponse {
  repeated FollowCount counts = 1;
}

message ClearUsersRequest {
  string user_id = 1;
}